# EventManager

./: .gitignore  CONTRIBUTING.md  README.md  env_example  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: flask.yml
src/: __init__.py
src/auth/: auth_user.py
src/config/: cred.py
src/models/: models_crud.py  models_user.py
src/templates/auth/: login.html  register.html
src/templates/base/: base.html  base_User.html
src/templates/event/: event_create.html  event_eventplace.html  event_update.html
src/templates/home/: home_about.html  home_contact.html  home_welcome.html
src/templates/user/: user_dashboard.html  user_profile.html  user_settings.html
src/utils/generator/: generator_event_id.py
src/views/: home.py  views_event.py  views_home.py  views_org.py  views_user.py
